💄 Correct text contrast

--- a/src/frontend/ui/popup/style.module.css
+++ b/src/frontend/ui/popup/style.module.css
@@ -25,12 +25,12 @@ body {
   height: 220px;
   background-color: #b80000;
   padding: 24px;
-  transition: 0.4s background-color;
+  transition: 0.4s background-color, 0.4s color;
   position: relative;
 }
 
 .accentDisabled {
-  background-color: #e9ebee !important;
+  background-color: var(--background-color-secondary) !important;
 }
 
 .itemBar {
